--- a/package.json
+++ b/package.json
@@ -13,35 +13,37 @@
     "@prisma/client": "^6.1.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "limiter": "^3.0.0",
-    "lucide-react": "^0.460.0",
-    "next": "16.0.5",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "recharts": "^2.15.0",
-    "xlsx": "^0.18.5",
-    "zod": "^4.1.13"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "recharts": "^3.7.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^25.2.0",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.3",
     "babel-plugin-react-compiler": "1.0.0",
-    "better-sqlite3": "^12.5.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.5",
-    "jsdom": "^27.2.0",
+    "better-sqlite3": "^12.6.2",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
+    "jsdom": "^28.0.0",
     "prisma": "^6.1.0",
-    "tailwindcss": "^4",
-    "tsx": "^4.20.6",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "typescript": "^5",
-    "vitest": "^4.0.14"
+    "vitest": "^4.0.18"
   }
 }
