docs: clarify environmen variables usage

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
-# Configuración de Base de Datos PostgreSQL
-# Formato: postgresql://usuario:password@host:puerto/nombre_base_datos
+# 1. CONEXIÓN A LA BASE DE DATOS
+# Sirve para: Que la app sepa dónde guardar y leer los datos (usuarios, gastos, etc).
+# Formato: postgresql://USUARIO:CONTRASEÑA@HOST:PUERTO/NOMBRE_BD
 DATABASE_URL="postgresql://johndoe:mypassword@localhost:5432/xencapital"
 
-# Secreto para la encriptación de sesiones (NextAuth)
-# Generar uno seguro en terminal con: openssl rand -base64 32
-AUTH_SECRET="cambiar_por_string_largo_y_seguro"
+# 2. CLAVE DE SEGURIDAD (IMPORTANTE)
+# Sirve para: Encriptar las sesiones de los usuarios. Si alguien roba esto, podrían hackear cuentas.
+# Cómo generar uno: Ejecuta `openssl rand -base64 32` en tu terminal o escribe algo muy largo y raro.
+AUTH_SECRET="cambiar_por_string_largo_y_seguro_con_numeros_y_letras"
 
-# URL base de la aplicación
-# En desarrollo: http://localhost:3000
-# En producción: https://midominio.com
+# 3. URL DE LA APLICACIÓN
+# Sirve para: Que la app sepa cuál es su dirección pública (necesario para redirecciones de login).
+# - En tu PC local usa: http://localhost:3000
+# - En tu servidor usa tu dominio o IP: https://midominio.com
 NEXTAUTH_URL="http://localhost:3000"
 
-# Confianza en host (necesario si estás detrás de un proxy como Nginx)
+# 4. CONFIANZA EN PROXY (SOLO SERVIDORES REALEZ)
+# Sirve para: Que el login funcione si usas Nginx o un Proxy delante.
+# Déjalo en "true" si vas a usar la guía de Nginx.
 AUTH_TRUST_HOST="true"
-
-
